# ClionProjects

./: .gitignore  README.md  REMDME.md
5gc/: CMakeLists.txt  amf_http_server.cpp
5gc/amf/: README.md
5gc/amf/include/: AmfConfiguration.h  AmfSm.h  HttpServer.h  NfManagement.h
5gc/amf/src/: N1N2Interface.cpp  UeContext.cpp
5gc/include/: N1N2Interface.h  SbiMessage.h  SbiMessageFactory.h  UeContext.h
5gc/src/: AmfConfiguration.cpp  AmfSm.cpp  HttpServer.cpp  NfManagement.cpp  SbiMessage.cpp  SbiMessageFactory.cpp
5gc/upf/: .gitignore  compile.sh  test_pfcp_interaction.sh
5gc/upf/docs/: BEFORE_AND_AFTER_COMPARISON.md  COMPILE_GUIDE.md  RSS_CONFIG_GUIDE.md  RSS_IMPLEMENTATION_CHECKLIST.md  UE_SESSION_DATA_FLOW.md  UE_SESSION_SOURCES_SUMMARY.md
5gc/upf/src/: pfcp_receiver_example.c  rss_complete_example.c  rss_implementation_example.c  smf_pfcp_client.c  smf_pfcp_client_fixed.c  upf_dpdk_example.c  upf_example.c  upf_rss_multi_queue.c
MemoryPool/: CMakeLists.txt  README.md  main.cpp
MemoryPool/core/: FixedMemoryPool.hpp  FixedMemoryPoolV2.hpp  IMemoryPool.h  IndexedMemoryPool.hpp  PoolStatistics.h  ThreadSafeMemoryPool.hpp  VariableMemoryPool.hpp
MemoryPool/docs/: FACTORY_USAGE.md  IndexedMemoryPool_Design.md  NGAP_Usage_Guide.md  THREADSAFE_USAGE.md
MemoryPool/tests/: allocator_demo.cpp  factory_demo.cpp  indexed_pool_demo.cpp  ngap_demo.cpp  threadsafe_demo.cpp
MemoryPool/utils/: MemoryPoolFactory.hpp  PoolAllocator.hpp
Open source projects/spdlog/: CMakeLists.txt  README.md
Open source projects/spdlog/examples/: 01_basic.cpp  02_named_logger.cpp  03_file_logging.cpp  04_multi_sink.cpp  05_level_pattern.cpp  06_async_logging.cpp  07_rotating_file.cpp  08_daily_file.cpp  09_global_logger.cpp  10_custom_format.cpp
Open source projects/zmq/: CMakeLists.txt  README.md
ReactorHttp-Cpp/: .gitignore  CMakeLists.txt
ReactorHttp-Cpp/include/: Log.h
ReactorHttp-Cpp/source/: TcpConnection.cpp  main.cpp
boost_demo/: CMakeLists.txt  main.cpp
boost_demo/include/: FileTransferSession.h  GetHandler.hpp  HttpGetSession.h  HttpHandler.hpp  HttpPostSession.h  HttpServer.hpp  HttpSession.h  PostHandler.hpp  UrlDecode.hpp
boost_demo/src/: FileTransferSession.cpp  GetHandler.cpp  HttpGetSession.cpp  HttpHandler.cpp  HttpPostSession.cpp  HttpServer.cpp  HttpSession.cpp  HttpSessionBase.cpp  PostHandler.cpp  main.cpp
boost_project/cow/: CMakeLists.txt  README.md
boost_project/cow/include/: Daemon.h  IpcClient.h  Server.h
boost_project/cow/src/: Daemon.cpp  IpcClient.cpp  Server.cpp  main.cpp
design_patterns/: CMakeLists.txt  factory_pattern.hpp  main.cpp  prototype.hpp  singleton.hpp  strategy.hpp
design_patterns/1Creational/: Builder.cpp  Builder.md  abstract_factory.cpp  abstract_factory_README.md  factory_pattern_README.md  prototype_README.md  singleton_README.md
design_patterns/2Structural/: adapter.cpp  adapter_README.md  bridge.cpp  bridge_README.md  composite.cpp  composite_README.md  decorator.cpp  decorator_README.md  facade.cpp  facade_README.md  flyweight.cpp  flyweight_README.md  proxy.cpp  proxy_README.md
design_patterns/3Behavioral/: Command.cpp  Command.md  Iterator.cpp  Iterator.md  Mediator.cpp  Mediator.md  Memento.cpp  Memento.md  Observer.cpp  Observer.md  Responsibility.cpp  Responsibility.md  State.cpp  State.md  Strategy.cpp  Strategy.md  TemplateMethod.cpp  TemplateMethod.md  Visitor.cpp  Visitor.md
dpdk/: CMakeLists.txt  README.md  arp_handler.c  arp_handler.h  example.c
grpc/: CMakeLists.txt  README.md  echoserver.grpc.pb.cc  echoserver.grpc.pb.h  echoserver.pb.cc  echoserver.pb.h  echoserver.proto  grpc_echo_client.cpp  grpc_echo_server.cpp
msg_queue/: CMakeLists.txt  REMDME.md  msg_que.cpp  msg_que.h  test_msg_queue.cpp
openssl_static/: BUILD_GUIDE.md  CMakeLists.txt  DEVELOPER_GUIDE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  advanced_build.sh  build.sh  build_projectB_only.sh
openssl_static/.github/workflows/: ci.yml
openssl_static/examples/: CMakeLists.txt  crypto_examples.cpp  security_examples.cpp
openssl_static/projectA/: CMakeLists.txt  projecta.pc.in
openssl_static/projectA/benchmarks/: crypto_benchmark.cpp
openssl_static/projectA/include/: crypto_config.h  crypto_logger.h  crypto_security.h  crypto_utils.h
openssl_static/projectA/src/: crypto_config.cpp  crypto_logger.cpp  crypto_security.cpp  crypto_utils.cpp
openssl_static/projectA/tests/: test_crypto_security.cpp  test_crypto_utils.cpp
openssl_static/projectB/: CMakeLists.txt
openssl_static/projectB/src/: main.cpp
pcap_replay/: CMakeLists.txt  README.md  sample.pcap
pcap_replay/include/: network_utils.h  packet_modifier.h  pcap_parser.h
pcap_replay/src/: client.cpp  network_utils.cpp  packet_modifier.cpp  pcap_parser.cpp  replayer.cpp  server.cpp
pcap_replay/tools/: pcap_generator  pcap_generator.cpp
pcapplusplus_repaly/: CMakeLists.txt  README.md
pcapplusplus_repaly/docs/: client_server_architecture.md
pcapplusplus_repaly/resources/: 1.pcap
pcapplusplus_repaly/src/: CMakeLists.txt  send_pcap.cpp
pcapplusplus_repaly/src/client/: CMakeLists.txt  main.cpp  pcap_client.cpp  pcap_client.h
pcapplusplus_repaly/src/common/: CMakeLists.txt  packet_analyzer.cpp  packet_analyzer.h  shared_memory.cpp  shared_memory.h
pcapplusplus_repaly/test/: CMakeLists.txt  pcap.cpp
tcp_server/: CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  README.md  client.cpp  main.cpp
thread_pool2/: CMakeLists.txt  example.cc  threadpool.h
thread_pool3/: CMakeLists.txt  main.cpp  thread_pool.hpp
websocket/boost/: CMakeLists.txt  client.cpp  server.cpp
websocket/openssl/: CMakeLists.txt  README.md  client.cpp  server.cpp
zsxq-cpp-ai/StateMachine/: CMakeLists.txt  protocol_example.cpp
zsxq-cpp-ai/StdFtp/: CMakeLists.txt  Makefile  README.md  build.sh  test.sh
zsxq-cpp-ai/StdHTTPS/: CMakeLists.txt  build.sh  stdhttps.pc.in
zsxq-cpp-ai/StdMem/: CMakeLists.txt
zsxq-cpp-ai/StdRPC/: CMakeLists.txt
zsxq-cpp-ai/StdVideoChatRoom/: .gitignore  CMakeLists.txt  README.md  build.sh  generate_certificates.sh  run.sh
(+344 files in other folders)
